[PlayStation] Fix PlayStation port https://bugs.webkit.org/show_bug.cgi?id=225913

Reviewed by Don Olmstead.

Fix PlayStation port

.:

* Source/cmake/OptionsPlayStation.cmake: Rename
PLAYSTATION_COPY_SHARED_LIBRARIES to PLAYSTATION_COPY_REQUIREMENTS and
let it copy more general files.
Touch ebootparam.ini by the playstation_tools_copy custom_target.

Source/JavaScriptCore:

* jsc.cpp: Include LinkBuffer.h.

Source/WebCore:

* PlatformPlayStation.cmake: Rename
PLAYSTATION_COPY_SHARED_LIBRARIES to PLAYSTATION_COPY_REQUIREMENTS.
* accessibility/AccessibilityMenuList.cpp:
(WebCore::AccessibilityMenuList::didUpdateActiveOption):
* platform/graphics/PixelBufferFormat.h: Include wtf/Optional.h.

Source/WTF:

* wtf/PlatformPlayStation.cmake: Rename
PLAYSTATION_COPY_SHARED_LIBRARIES to PLAYSTATION_COPY_REQUIREMENTS.

Tools:

* MiniBrowser/playstation/CMakeLists.txt: Rename
PLAYSTATION_COPY_SHARED_LIBRARIES to PLAYSTATION_COPY_REQUIREMENTS.

* MiniBrowser/playstation/WebViewWindow.cpp:
(WebViewWindow::updateTitle): Add nullptr check.
(WebViewWindow::updateURL): Add nullptr check.


Canonical link: https://commits.webkit.org/237865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277660 268f45cc-cd09-0410-ab3c-d52691b4dbfc